some more light cleanup and simplification